Fix Java 8 build errors in wpilibNewCommands
* @Deprecated has no args in Java 8. Suppress deprecation warnings in a few places due to this.
* No Set.of()
* No Map.of()
* No Map.ofEntries() or Map.entry()