@@ -7,7 +7,8 @@ package edu.wpi.first.wpilibj2.command;
 import static edu.wpi.first.util.ErrorMessages.requireNonNullParam;
 
 import edu.wpi.first.math.controller.PIDController;
-import java.util.Set;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.function.DoubleConsumer;
 import java.util.function.DoubleSupplier;
 
@@ -48,7 +49,7 @@ public class PIDCommand extends Command {
     m_useOutput = useOutput;
     m_measurement = measurementSource;
     m_setpoint = setpointSource;
-    m_requirements.addAll(Set.of(requirements));
+    m_requirements.addAll(new HashSet<>(Arrays.asList(requirements)));
   }
 
   /**
